--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -13,3 +13,27 @@
     <h3>Product List</h3>
     <div id="product-list"></div>
 </section>
+
+<section>
+    <h2>Manage Orders</h2>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Customer Name</th>
+                <th>Email</th>
+                <th>Address</th>
+                <th>Total</th>
+                <th>Status</th>
+                <th>Update</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody id="orderTable">
+            <!-- Orders will be inserted dynamically here -->
+        </tbody>
+    </table>
+</section>
+
+<!-- Link the external JavaScript file -->
+<script src="dashboard.js"></script>
